# grindboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: build-release.yml  ci.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 17276c30c337_add_authentication.py  8b55c5c036e5_drop_auth_token_table.py  c3c891c1a904_initial_migration.py  cf308266d562_add_tags_table_and_tags_user_with_tasks_.py
app/: config.py  main.py  security.py
app/api/: routers.py  schemas.py
app/core/: database.py
app/database/: __init__.py  crud.py  models.py
deploy/: compose.yml
server/: .gitignore  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 3a9f1b2c4d5e_add_tag_unique_constraint_and_cascade.py  7f6b5d4c3a21_add_tasks_user_position_index.py  a27e17b3719f_initial_sqlmodel_schema.py  c6387905b36d_add_position_column_to_tasks.py  d1e2f3a4b5c6_add_completed_at_and_deadline_to_tasks.py
server/app/: config.py  main.py
server/app/core/: database.py  security.py
server/app/models/: __init__.py  tags.py  tasks.py  users.py
server/app/tags/: router.py  service.py
server/app/tasks/: router.py  service.py
server/app/users/: router.py  service.py
server/app/web/: router.py
server/tests/: conftest.py  test_auth_endpoints.py  test_tags_endpoints.py  test_tasks_endpoints.py
tests/: conftest.py  test_auth_endpoints.py  test_tags_endpoints.py  test_tasks_endpoints.py
web/: components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
(+47 files in other folders)
