[project]
name = "grindboard"
version = "2.0.0"
description = "A minimal FastAPI backend for tasks management"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
app = ["py.typed"]
